--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     
     <div class="footer-wrapper row mt-auto">
       <footer class="d-flex justify-content-center align-items-center">
-        Copyright © 2022 Maciej Rzadzinski&nbsp&nbsp;
+        by mRzadzinski&nbsp&nbsp;
         <a href="https://github.com/mRzadzinski/library">
             <img id="github" src="./img/github.png" alt="github">
       </footer>
